backend compatibility fix